hugo/Kube/gateways/funfact-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: funfacttdebian
  namespace: hugo
spec:
  hosts:
    - "funfact.tdebian.com"
  gateways:
    - nginx-gateway
  http:
    - route:
        - destination:
            host: fun-fact-svc.hugo.svc.cluster.local
